Add ?.via to .gitignore; I use local .via files with single letter names for debugging that I never want to submit.  (Any real tests should have good descriptive names.) Update Xcode project to remove automatic mac NSDocument options which don't apply to esh as a command line tool.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 *.a
 *.vntr
 
+# Single character via files assumed to be temporary test/debug hacks
+?.via
+?2.via
+
 .DS_Store
 Vireo_Xcode/VireoEggShell.xcodeproj/xcshareddata/xcschemes/EggShell.xcscheme
 make-it/esh
