Removed Linx.cpp and associated test.
The Linx instructions were being emitted but were not implemented.
Removing them as they are excessive and could be confusing for outside
users attempting to utilize the viacode instructions.

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -8,7 +8,7 @@ OUTPUT_EXE=../dist/esh
 
 COMMANDLINE = main.cpp
 CORE = VireoMerged.cpp Thread.cpp Timestamp.cpp CEntryPoints.cpp
-IO = FileIO.cpp Canvas2d.cpp DebugGPIO.cpp Linx.cpp
+IO = FileIO.cpp Canvas2d.cpp DebugGPIO.cpp
 
 OBJS = $(COMMANDLINEOBJS) $(COREOBJS) $(IOOBJS)
 COMMANDLINEOBJS = $(COMMANDLINE:%.cpp=$(OBJDIR)/%.o)
