Makefile cleanup: - Allow optional custom.mak include (.gitignore'd) so debug flags can be overridden locally   without modifying the makefiles - Add macro for OUTPUT_DIR=../dist since it's used in more than one place - Change prep rule target to be the output folder itself, so it doesn't run every time and   cause the output to be relinked unnecessarily. - Use .bc.d instead of .d for deps in EmMakefile for vjs, so they don't collide with .d files   from native target.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Vireo_Xcode/VireoEggShell.xcodeproj/xcshareddata/xcschemes/EggShell.xcscheme
 make-it/esh
 target-support/
 dist/
+custom.mak
 
 # Visual Studio Ignores
 Vireo_VS/Debug/*
