Amended make coverage rule and added docs.
- Added Contributing Document to layout how to contribute to Vireo
Development.
- Added instructions to run the Coverage report for the Vireo testing.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ target-support/
 dist/
 custom.mak
 
+# Coverage Files
+cov.info
+html_coverage_output/
+
 # Visual Studio Ignores
 Vireo_VS/Debug/*
 Vireo_VS/VireoCommandLine.sdf
