--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -61,8 +61,8 @@ else
                 LDFLAGS+= -Wl,-T -Wl,../source/XuBlaze/lscript.ld -L ../source/XuBlaze/standalone_bsp_0/microblaze_0/lib  -mlittle-endian -mcpu=v9.2 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -Wl,--start-group,-lxil,-lgcc,-lc,-lstdc++,--end-group
             else
                 CC=/usr/bin/clang++
-                CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fdata-sections -ffunction-sections -fprofile-arcs -ftest-coverage
-                LDFLAGS+= -s -Wl,--gc-sections --coverage
+                CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fdata-sections -ffunction-sections
+                LDFLAGS+= -s -Wl,--gc-sections
                 # LDSTATIC+= -static
             endif
         endif
@@ -87,6 +87,9 @@ endif
 
 # Add common desktop modules.
 CFLAGS+= -DVIREO_STDIO=1 -DVIREO_FILESYSTEM=1 -DVIREO_FILESYSTEM_DIRLIST=1
+
+COVERAGE_CFLAGS = $(CFLAGS) -fprofile-arcs -ftest-coverage
+COVERAGE_LDFLAGS = $(LDFLAGS) --coverage
 
 ifneq ($(wildcard custom.mak),)
    include custom.mak
@@ -117,7 +120,7 @@ simple:
 	$(STRIP)
 
 coverage:
-	make esh
+	make CFLAGS='$(COVERAGE_CFLAGS)' LDFLAGS='$(COVERAGE_LDFLAGS)' esh
 	cd ../test-it; ./test.js -once -n
 	cd objs; llvm-cov gcov -f -b *.gcda
 	cp llvm-gcov.sh ./objs
