Corrected back to g++ for ci build.

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -60,7 +60,7 @@ else
                 CFLAGS+= $(CCOPT)  -DkVireoOS_XuBlaze -fmessage-length=0 -mlittle-endian -mcpu=v9.2 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections
                 LDFLAGS+= -Wl,-T -Wl,../source/XuBlaze/lscript.ld -L ../source/XuBlaze/standalone_bsp_0/microblaze_0/lib  -mlittle-endian -mcpu=v9.2 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -Wl,--start-group,-lxil,-lgcc,-lc,-lstdc++,--end-group
             else
-                CC=clang++
+                CC=g++
                 CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fdata-sections -ffunction-sections
                 LDFLAGS+= -s -Wl,--gc-sections
                 # LDSTATIC+= -static
@@ -90,6 +90,7 @@ CFLAGS+= -DVIREO_STDIO=1 -DVIREO_FILESYSTEM=1 -DVIREO_FILESYSTEM_DIRLIST=1
 
 COVERAGE_CFLAGS = $(CFLAGS) -fprofile-arcs -ftest-coverage
 COVERAGE_LDFLAGS = $(LDFLAGS) --coverage
+COVERAGE_CC = /usr/bin/clang++
 
 ifneq ($(wildcard custom.mak),)
    include custom.mak
@@ -120,7 +121,7 @@ simple:
 	$(STRIP)
 
 coverage:
-	make CFLAGS='$(COVERAGE_CFLAGS)' LDFLAGS='$(COVERAGE_LDFLAGS)' esh
+	make CC='$(COVERAGE_CC)' CFLAGS='$(COVERAGE_CFLAGS)' LDFLAGS='$(COVERAGE_LDFLAGS)' esh
 	cd ../test-it; ./test.js -once -n
 	cd objs; llvm-cov gcov -f -b *.gcda
 	cp llvm-gcov.sh ./objs
