Fixing Visual C++ compiler error on isnan : ambiguous call to overloaded function. Update .gitignore to include Resharper temp files.

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ sample-vis/Gyro Boy 12_15
 sample-vis/Gyro Boy Fix2
 Vireo_XCode/VireoEggShell.xcodeproj/project.xcworkspace/xcuserdata
 Vireo_XCode/VireoEggShell.xcodeproj/xcuserdata
+Vireo_VS/_ReSharper.VireoCommandLine
 make-it/build
 source/io/LINX
 sample-vis/SampleLVNativeMethod/Canvas2D/DerivedData
