--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vireo-sdk",
+  "name": "vireo",
   "version": "2.0.0-alpha.9",
   "description": "SDK for an experimental vireo runtime engine.",
   "dependencies": {
