--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vireo",
-  "version": "2.0.0-alpha.17",
+  "version": "2.0.0",
   "description": "SDK for an experimental vireo runtime engine.",
   "dependencies": {},
   "devDependencies": {
