Update gitignore and cleanup EmMakefile

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ cov.info
 html_coverage_output/
 
 # Visual Studio Ignores
+/Vireo_VS/.vs/*
 Vireo_VS/Debug/*
 Vireo_VS/VireoCommandLine.sdf
 Vireo_VS/VireoCommandLine.vcxproj.user
