--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ addons:
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
+- . $HOME/.nvm/nvm.sh
+- nvm install stable
+- nvm use stable
 - node -v
 - npm -v
 - python -V
