--- a/.travis.yml
+++ b/.travis.yml
@@ -20,16 +20,17 @@ before_install:
 install:
 - npm install
 - pip install --user -r requirements.txt
-before_script:
-- nohup python -m httpbin.core --port 5000 &
-- time while ! nc -q 1 localhost 5000 </dev/null; do sleep 2; done
-- curl http://localhost:5000/get?show_env=1
 - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
-- git clone --depth 1 https://github.com/ni-kismet/emscripten-sdk.git && emscripten-sdk/emsdk
-  activate --build=Release sdk-master-64bit && source emscripten-sdk/emsdk_env.sh
+- git clone --depth 1 https://github.com/ni-kismet/emscripten-sdk.git
+- emscripten-sdk/emsdk activate --build=Release sdk-master-64bit
+- source emscripten-sdk/emsdk_env.sh
 - cat ~/.emscripten
 - emcc -v
 - gcc -v
+before_script:
+- nohup python -m httpbin.core --port 5000 &
+- while [! nc -q 1 localhost 5000 </dev/null]; do sleep 1; done
+- curl http://localhost:5000/get?show_env=1
 script:
 - make
 - make testjs
