--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "requirejs": "^2.3.2"
   },
   "scripts": {
-    "test": "npm run lint & npm run karma",
+    "test": "npm run lint && npm run karma && npm run karma-longrun",
     "lint": "eslint .",
     "karma": "karma start --browsers PhantomJS,Firefox --single-run",
-    "prehttpbin-install": "python -V & pip -V & virtualenv --version",
+    "karma-longrun": "karma start karma.longrun.conf.js --browsers Firefox --single-run",
+    "prehttpbin-install": "python -V && pip -V && virtualenv --version",
     "httpbin-install": "pip install --require-virtualenv -r requirements.txt",
     "httpbin": "python -m httpbin.core --port 5000"
   },
