Add test-it/temp folder to .gitignore to have place for local tests not meant to be bowled.

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/xcuserdata
 Vireo_Web/emsdk_portable
 Documents/gh-pages
 test-it/node_modules
+test-it/temp
 make-it/emsdk_portable
 slmicro
 vilib/analysis/source
