--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {},
   "devDependencies": {
     "colors": "^1.1.2",
+    "core-js": "^2.4.1",
     "diff": "^1.4.0",
     "eslint": "^3.11.1",
     "jasmine-core": "^2.5.2",
