--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "eslint": "^3.11.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -23,6 +25,8 @@
     "karma-longrun": "karma start karma.longrun.conf.js --browsers Firefox --single-run",
     "karma-firefox": "karma start --browsers Firefox --single-run",
     "karma-phantomjs-debug": "karma start --browsers PhantomJS_Debug --single-run",
+    "karma-browsers": "karma start --browsers IE,Chrome,Firefox --single-run",
+    "karma-browsers-longrun": "karma start karma.longrun.conf.js --browsers IE,Chrome,Firefox --single-run",
     "prehttpbin-install": "python -V && pip -V && virtualenv --version",
     "httpbin-install": "pip install --require-virtualenv -r requirements.txt",
     "httpbin": "python -m httpbin.core --port 64526"
