--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "diff": "^1.4.0",
     "eslint": "^3.11.1",
     "jasmine-core": "^2.5.2",
+    "jasmine-expect": "^3.5.0",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
