--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vireo",
   "version": "5.3.0",
   "description": "SDK for an experimental vireo runtime engine.",
-  "dependencies": {},
   "devDependencies": {
     "colors": "^1.1.2",
     "core-js": "^2.4.1",
@@ -17,7 +16,8 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "requirejs": "^2.3.2"
+    "requirejs": "^2.3.2",
+    "setimmediate": "^1.0.5"
   },
   "scripts": {
     "test": "npm run lint && npm run karma && npm run karma-longrun",
