--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jasmine-expect": "^3.5.0",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
@@ -29,6 +30,7 @@
     "karma-phantomjs-debug": "karma start --browsers PhantomJS_Debug --single-run",
     "karma-browsers": "karma start --browsers IE,Chrome,Firefox --single-run",
     "karma-browsers-longrun": "karma start karma.longrun.conf.js --browsers IE,Chrome,Firefox --single-run",
+    "karma-coverage": "karma start karma.coverage.conf.js",
     "prehttpbin-install": "python -V && pip -V && virtualenv --version",
     "httpbin-install": "pip install --require-virtualenv -r requirements.txt",
     "httpbin": "python -m httpbin.core --port 64526"
